frontend/thought_shower/src/components/Home/Home.css
.homeBody {
    background: linear-gradient(rgba(41, 100, 148, 0.5), rgba(66, 165, 245, 0.3), transparent), url("homeBGTest.jpg");
    background-size: 100% 100%;
    padding: 10vh;
}

.intro {
    margin: auto;
    align-items: center;   
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    min-height: 30%;
    width: 80%;
    border-radius: 5px;
    margin-bottom: 10vh;
    background-color: rgba(245, 245, 245, 0.9);
}

.jumboTitle {
  text-align: center;
}

.jumboPara {
  text-align: center;
}

.cardDiv {
    margin: auto;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    min-height: 30%;
    width: 80%;
    border-radius: 5px;
    border: 2px solid black;
    background-color: rgba(245, 245, 245, 0.5);
}

.cardDiv:hover {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
}

.homeCardTitle {
  text-align: center;
  margin-bottom: 2vh;
  font-weight: 700;
  font-size: 1.5rem;
}

.homeCardBody {
  text-align: center;
  margin-bottom: 2vh;
}

